2008-03-28  Simon Hausmann  <hausmann@webkit.org>

        Fix the Qt build.

        * rendering/Length.h: Include wtf/MathExtras.h for round().

2008-03-28  David Hyatt  <hyatt@apple.com>

        Fix a bug where background-position truncates instead of rounding when it evaluates to fractional
        pixel values.  This matches other browsers.

        Reviewed by maciej

        Added fast/backgrounds/background-position-rounding.html

        * rendering/Length.h:
        (WebCore::Length::calcValue):
        (WebCore::Length::calcMinValue):
        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::calculateBackgroundImageGeometry):

2008-03-27  Kevin Ollivier  <kevino@theolliviers.com>

        wx build fix. Return a default value for operator == 
        when !USE(WXGC) (not implemented in that case).

        * platform/graphics/wx/AffineTransformWx.cpp:
        (WebCore::AffineTransform::operator== ):

2008-03-27  Maciej Stachowiak  <mjs@apple.com>

        - fix build

        * svg/SVGGlyphMap.h:
        (WebCore::GlyphMapNode::create):

2008-03-27  Brady Eidson  <beidson@apple.com>

        Forgot a small requested change before committing

        * loader/DocumentLoader.cpp:
        (WebCore::DocumentLoader::mainResource):

2008-03-27  Brady Eidson  <beidson@apple.com>

        Reviewed by Adam Roben

        Move [WebDataSource mainResource] and [WebDataSource subresources] down into WebCore
        as the push to core-ify WebArchives continues.

        This patch also introduces a behavior change.  WebCore allows ArchiveResources with null or empty data.  
        WebKit has had the inexplicable distinction of allowing empty Data in a WebResource, but not null.  
        Since WebResource is API, I decided to leave it be to avoid a behavior change.  But internally created resources 
        (as in "while archiving a page") are accepting of null or empty data.
